SUP-19055: Fixed visibility of right split-view

--- a/cms-ui/apps/editor-ui/src/app/core/components/project-editor/project-editor.component.scss
+++ b/cms-ui/apps/editor-ui/src/app/core/components/project-editor/project-editor.component.scss
@@ -126,6 +126,10 @@ folder-context-menu {
         }
     }
 
+    &.hasNoRightPanel .right-panel {
+        display: none;
+    }
+
     &.focusMode.rightPanelFocused {
         @include focusModeAnimation;
 
